updated some files

--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -10,7 +10,7 @@
         position: fixed ;
         top: 0 ;
         left: 0 ;
-        background: #f9a no-repeat url(img/001.jpg) center ;
+        background: #f9a no-repeat url(img/Dark.png) center ;
         background-size: cover ;
         width: 100vw ;
         height: 100vh ;
