--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -38,7 +38,7 @@
 	color: #d2d2d2;
 }
 
-#tray, #pulseaudio, #cpu, #network, #memory, #backlight, #battery, #clock, #temperature {
+#tray, #pulseaudio, #cpu, #network, #memory, #backlight, #battery, #clock, #temperature, #custom-power {
 	padding: 0 12px;
 	color: #191818;
 }
@@ -88,4 +88,9 @@
 #clock {
 	margin: 5px 5px;
 	background-color: #FFFFFF;
+}
+
+#custom-power {
+	margin: 5px 5px;
+	background-color: #FF6E6E;
 }
