--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,89 +8,89 @@
 
 #waybar {
 	border-radius: 0;
-	background-color: #272727;
+	background-color: #151515;
 	transition-duration: .5s;
 }
 
 #workspaces button {
-	padding: 0 12px;
-	color: #ebdbb2;
-}
-
-#workspaces button:hover {
-	background-color: #272727;
-	color: #fb4934;
-	border-bottom:4px solid #fb4934;
-}
-
-#workspaces button.focused {
-	color: #ebdbb2;
-	border-bottom:4px solid #ebdbb2;
-}
-
-#workspaces button.urgent {
-	background-color: #fb4934;
-	border-bottom:4px solid #fb4934;
+	padding: 0 4px;
+	margin: 5px 5px;
+  background-color: #E8E3E3;
 	color: #272727;
 }
 
+#workspaces button:hover {
+	background-color: #151515;
+	color: #fb4934;
+}
+
+#workspaces button.focused {
+	color: #151515;
+	background-color: #8DA3B9;
+}
+
+#workspaces button.urgent {
+	background-color: #B66467;
+	color: #151515;
+}
+
 #mode, #window {
-	color: #d2d2d2;
+	color: #E8E3E3;
 }
 
 #tray, #pulseaudio, #cpu, #network, #memory, #backlight, #battery, #clock, #temperature, #custom-power {
 	padding: 0 12px;
-	color: #272727;
+	color: #151515;
 }
 
 #pulseaudio {
 	margin: 5px 5px;
-	background-color: #d3869b;
+	background-color: #A988B0;
 }
 
 
 #network {
 	margin: 5px 5px;
-	background-color: #fabd2f;
+	background-color: #D9BC8C;
 }
 
 
 #temperature {
 	margin: 5px 5px;
-	background-color: #Fb4934;
+	background-color: #B66467;
 }
 
 
 #battery {
 	margin: 5px 5px;
-	background-color: #b8bb26;
+	background-color: #8C977D;
 }
 
 
 #memory {
 	margin: 5px 5px;
-	background-color: #fabd2f;
+	background-color: #D9BC8C;
 }
 
 
 #backlight {
 	margin: 5px 5px;
-	background-color: #8ec07c;
+	background-color: #8AA6A2;
 }
 
 
 #cpu {
 	margin: 5px 5px;
-	background-color: #83a598;
+	background-color: #8DA3B9;
 }
 
 
 #clock {
 	margin: 5px 5px;
-	background-color: #ebdbb2;
+	background-color: #E8E3E3;
 }
 
 #custom-power {
 	margin: 5px 5px;
-	background-color: #fb4934;
+	background-color: #B66467;
 }
