--- a/waybar/style.css
+++ b/waybar/style.css
@@ -38,7 +38,7 @@
 	color: #E8E3E3;
 }
 
-#tray, #bluetooth, #pulseaudio, #cpu, #network, #memory, #backlight, #disk, #battery, #clock, #temperature, #custom-power, #taskbar, #idle_inhibitor {
+#tray, #bluetooth, #pulseaudio, #cpu, #network, #memory, #backlight, #disk, #battery, #clock, #temperature, #custom-power, #taskbar, #idle_inhibitor, #firefox {
 	padding: 0 12px;
 	color: #242424;
 }
