--- a/waybar/style.css
+++ b/waybar/style.css
@@ -6,8 +6,12 @@
 	min-height: 0;
 }
 
+tooltip {
+  background: #242424;
+}
+
 #waybar {
-	border-radius: 0;
+	border-radius: 0;   
 	background-color: #242424;
 	transition-duration: .5s;
 }
@@ -15,23 +19,32 @@
 #workspaces button {
 	padding: 0px 10px;
 	margin: 5px 3px;
-  background-color: #E8E3E3;
-	color: #242424;
+  background-color: #303030;
+	color: #E8E3E3;
 }
 
 #workspaces button:hover {
-	background-color: #8AA6A2;
-	color: #242424;
+	box-shadow: inherit;
+  text-shadow: inherit;
+  background: transparent;
+  border: transparent;
+	color: #E8E3E3;
 }
 
 #workspaces button.focused {
-	color: #242424;
-	background-color: #8DA3B9;
+	color: #E8E3E3;
+	background-color: #505050;
 }
 
 #workspaces button.urgent {
 	background-color: #B66467;
-	color: #242424;
+	color: #E8E3E3;
+}
+
+#mode {
+  background-color: #303030;
+  margin: 5px 3px;
+  padding: 0px 10px;
 }
 
 #mode, #window {
@@ -41,67 +54,46 @@
 #tray, #mpd, #bluetooth, #pulseaudio, #cpu, #network, #memory, #backlight, #disk, #battery, #clock, #temperature, #custom-power, #taskbar, #idle_inhibitor, #firefox {
 	padding: 0 12px;
 	margin: 5px 3px;
-	color: #242424;
+	color: #E8E3E3;
+  background-color: #303030;
+}
+
+#network {
+  color: #00A7EF;
+}
+
+#backlight {
+  color: #FFBF00;
 }
 
 #pulseaudio {
-	background-color: #A988B0;
+  color: #D7DEE2;
 }
-
-
-#network {
-	background-color: #D9BC8C;
-}
-
 
 #temperature {
-	background-color: #B66467;
-}
-
-
-#battery {
-	background-color: #8C977D;
-}
-
-#memory {
-	background-color: #D9BC8C;
+  color: #FF8A00;
 }
 
 #disk {
-	background-color: #8AA6A2;
+  color: #FFDEA9;
 }
-  
-#backlight {
-	background-color: #8AA6A2;
-}
-
-
-#cpu {
-	background-color: #8DA3B9;
-}
-
 
 #clock {
-	background-color: #E8E3E3;
+  color: #CFD8DD;
 }
 
-#custom-power {
-	background-color: #B66467;
+#battery {
+  color: #77B323;
 }
 
-#tray {
-  background-color: #404040;
+#cpu {
+  color: #FE88AE;
 }
 
-#bluetooth {
-  background-color: #E8E3E3;
-}
-
-#idle_inhibitor {
-  background-color: #A988B0;
+#memory {
+  color: #657780;
 }
 
 #mpd {
-  background-color: #8DA3B9;
+  color: #00AAF1;
 }
-
