--- a/waybar/style.css
+++ b/waybar/style.css
@@ -51,7 +51,20 @@ tooltip {
 	color: #E8E3E3;
 }
 
-#language, #tray, #mpd, #bluetooth, #pulseaudio, #cpu, #network, #memory, #backlight, #disk, #battery, #clock, #temperature, #custom-power, #taskbar, #idle_inhibitor, #firefox {
+#language, 
+#tray, 
+#mpd, 
+#bluetooth, 
+#pulseaudio, 
+#cpu, 
+#network, 
+#memory, 
+#backlight, 
+#disk, 
+#battery, 
+#clock, 
+#temperature, 
+#idle_inhibitor {
 	padding: 0 12px;
 	margin: 5px 3px;
 	color: #E8E3E3;
@@ -82,8 +95,22 @@ tooltip {
   color: #CFD8DD;
 }
 
+@keyframes blink {
+    to {
+        background-color: #DE2F2E;
+    }
+}
+
 #battery {
   color: #77B323;
+}
+
+#battery.critical:not(.charging) {
+    animation-name: blink;
+    animation-duration: 0.7s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 #cpu {
